# volt_emote

./: CMakeLists.txt  README.md
data/: NEO_PIR_mappings.md
res/deeds/: enlist.json
tests/default/: CMakeLists.txt  main.cpp
volt_emote/: CMakeLists.txt
volt_emote/include/volt/: emote.hpp
volt_emote/include/volt/emote/: NEOPIR.hpp  OCEAN.hpp  PAD.hpp  Temperament.hpp
volt_emote/src/volt/emote/: NEOPIR.cpp  OCEAN.cpp  PAD.cpp  Temperament.cpp
